Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ampapi",
+  "name": "@cubecoders/ampapi",
   "version": "1.0.0",
   "description": "API Library for CubeCoders AMP",
   "main": "ampapi.js",
